# movie_recommendation_simple_rag

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  coverage.xml  main.py  pyproject.toml  readme.txt
.github/: ci.yml
.github/workflows/: ci.yml
prototyping/: call_api.py  connect_api.py
src/: main.py
src/agents/: agent_router.py  netflix_movies.py  netflix_movies_OLD.py  trending_movies.py
src/app/: serve.py
src/utils/: connect_api.py
tests/: test_agent_router.py  test_netflix_movies.py  test_serve.py  test_trending_movies.py
