[tool.poetry]
name = "genai-eng-repository"
version = "0.1.0"
description = ""
authors = ["Javi L <javilazarogarcia@gmail.com>"]
readme = "README.md"

packages = [
    { include = "agents", from = "src" },
    { include = "app", from = "src" },
    { include = "utils", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.12,<4.0"  # Define Python version here
requests = ">=2.32.3,<3.0.0"
openai = ">=1.60.1,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
fastapi = ">=0.115.7,<0.116.0"
streamlit = ">=1.41.1,<2.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
loguru = ">=0.7.3,<0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
